2006-02-12  Edward Hervey  <edward@fluendo.com>

	* gst/playback/gstplaybasebin.c: (prepare_output): 
	Remove stray semi-colon (fixes #330888).

2006-02-12  Jan Schmidt  <thaytan@mad.scientist.com>

	* sys/ximage/ximagesink.c: (gst_ximagesink_check_xshm_calls):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls):
	Fix up the XShm call testing so that we catch errors, and don't
	cause new ones by attempting to detach from a segment we failed
	to attach to. Fixes #312439.

2006-02-10  Edward Hervey  <edward@fluendo.com>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Added flv file typefind (video/x-flv).

2006-02-10  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_video_caps),
	(gst_riff_create_video_template_caps):
	Added FLV1 <==> 'video/x-flash-video,flvversion=1' conversion.
	Also added the caps to the default set of riff video caps.

2006-02-09  Andy Wingo  <wingo@pobox.com>

	* ext/ogg/gstoggmux.c (GstOggPad): Keep track of both the start
	time and the end time of the last packet in the page.
	(gst_ogg_mux_pad_queue_page): In addition to setting the timestamp
	on the pages in our queue, set the duration as well. Reflow a
	debug statement.
	(gst_ogg_mux_collected): Keep track of GstOggPad->timestamp_end.
	Fixes bad muxing order.

2006-02-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/rtp/gstbasertppayload.c:
	(gst_basertppayload_setcaps), (gst_basertppayload_push):
	  update seqnum before setting it on the packet; this makes sure
	  that the timestamp and seqnum properties match after pushing
	  a buffer

2006-02-09  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/audio/gstringbuffer.c
	(gst_ring_buffer_samples_done): Cast to guint64, fixes an integer
	overflow after 13.5 hours of recording. Kapow!

	* ext/alsa/gstalsasrc.c (gst_alsasrc_delay): Clamp the delay to
	the buffer size -- we don't care about underrun/overrun reporting