@@ -1,3 +1,15 @@
+2006-02-12  Wim Taymans  <wim@fluendo.com>
+
+	* gst-libs/gst/audio/gstbaseaudiosink.c:
+	(gst_base_audio_sink_get_time), (gst_base_audio_sink_setcaps),
+	(gst_base_audio_sink_drain), (gst_base_audio_sink_preroll),
+	(gst_base_audio_sink_render), (gst_base_audio_sink_change_state):
+	Use scale functions when possible.
+	Fix error messages.
+	Free clockid when after waiting for EOS.
+	Use G_(UN_)LIKLY when it makes sense.
+	Fix sample clipping bug found by Arwed v. Merkatz fixes #330789.
+
 2006-02-12  Edward Hervey  <edward@fluendo.com>
 
 	* gst/playback/gstplaybasebin.c: (prepare_output): 
